<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BmiCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">BMI Calculator</string>
    <string name="english">English</string>
    <string name="metric">Metric</string>
    <string name="height">Height:</string>
    <string name="width">Weight:</string>
    <string name="calculate">Calculate</string>

</resources>
