<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmicalc.MainActivity" >

    <Space
        android:layout_column="1"
        android:layout_gravity="fill_vertical"
        android:layout_row="2" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/heightLayout"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3" >

        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="ft."
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/weightLayout"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="5" >

        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/width"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="lb."
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/calculateButton"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="6"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="7"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2" >

        <RadioButton
            android:id="@+id/engRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/metricRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric" />
    </RadioGroup>

    <TextView
        android:id="@+id/resultTextView1"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="8"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</GridLayout>